--- a/app/views/exercice/one.html.erb
+++ b/app/views/exercice/one.html.erb
@@ -6,6 +6,10 @@
 <p>Afficher une suite de chiffres de 1 à 100</p>
 <p>Réponse:</p>
 <%# Écrire réponse Exo 1.1 ici %>
+<% for i in (1..99) do %>
+  <%= i %>,
+<% end %>
+100.
 
 <h2>Exo 1.2 : lister les sociétés </h2>
 <p>Ici, lister toutes les sociétés inclues dans la base de données:</p>
