--- a/app/views/exercice/one.html.erb
+++ b/app/views/exercice/one.html.erb
@@ -29,7 +29,12 @@
 <br/>
 <p>Réponse:</p>
 <%# Écrire réponse Exo 1.2 ici %>
-
+<ul class="list-group">
+<% @companies.each do |company| %>
+  <li class="list-group-item"> <%= company.title %> </li>
+<% end %>
+</ul>
+<br/>
 <%# piste https://guides.rubyonrails.org/layouts_and_rendering.html#rendering-by-default-convention-over-configuration-in-action %>
 
 
