--- a/app/views/exercice/three.html.erb
+++ b/app/views/exercice/three.html.erb
@@ -16,6 +16,7 @@
 
 <h3>Exo 3.3: Une troisième liste</h3>
 <p>Afficher une troisième liste ne listant que les sociétés dont le prénom du fondateur commence par un S.
-
+<br/>
+<list-component title='Liste C' :items=<%= @companies_with_s_founder.to_json %>></list-component>
 <br/>
 <a href='/two'>Exercice précédent</a>
